--- a/package.json
+++ b/package.json
@@ -4,13 +4,15 @@
   "license": "MIT",
   "author": "LE GOFF",
   "dependencies": {
+    "google-map-react": "^1.1.5",
     "react": "^16.6.3",
-    "react-dom": "^16.4.2",
-    "react-app-polyfill": "^1.0.0"
+    "react-app-polyfill": "^1.0.0",
+    "react-dom": "^16.4.2"
   },
   "scripts": {
-    "build": "$(npm bin)/parcel build ./src/index.html",
-    "start": "./start.sh"
+    "build": "parcel build ./src/index.html",
+    "start": "parcel src/index.html",
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "prettier": {
     "printWidth": 80,
@@ -19,11 +21,13 @@
     "trailingComma": "es5"
   },
   "devDependencies": {
+    "@types/google-map-react": "^1.1.1",
+    "@types/node": "^12.12.5",
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
+    "parcel": "^1.12.3",
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
-    "parcel": "^1.12.3",
     "tslib": "^1.10.0",
     "typescript": "^3.6.4"
   }
