--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "LE GOFF",
   "dependencies": {
     "google-map-react": "^1.1.5",
-    "react": "^16.6.3",
-    "react-app-polyfill": "^1.0.0",
-    "react-dom": "^16.4.2"
+    "react": "^16.11.0",
+    "react-dom": "^16.11.0",
+    "react-app-polyfill": "^1.0.0"
   },
   "scripts": {
     "build": "parcel build ./src/index.html",
@@ -26,8 +26,6 @@
     "@types/react": "^16.9.11",
     "@types/react-dom": "^16.9.3",
     "parcel": "^1.12.3",
-    "react": "^16.11.0",
-    "react-dom": "^16.11.0",
     "tslib": "^1.10.0",
     "typescript": "^3.6.4"
   }
