--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "license": "MIT",
   "author": "LE GOFF",
   "dependencies": {
+    "@types/papaparse": "^5.0.1",
+    "fetch": "^1.1.0",
     "google-map-react": "^1.1.5",
+    "papaparse": "^5.1.0",
     "react": "^16.11.0",
-    "react-dom": "^16.11.0",
-    "react-app-polyfill": "^1.0.0"
+    "react-app-polyfill": "^1.0.0",
+    "react-dom": "^16.11.0"
   },
   "scripts": {
     "build": "parcel build ./src/index.html",
