--- a/tsconfig.json
+++ b/tsconfig.json
@@ -25,6 +25,9 @@
       "*": ["src/*", "node_modules/*"]
     },
     "jsx": "react",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "types": [
+      "googlemaps", "node"
+    ]
   }
 }
